unpackaged/main/default/objects/Contact/fields/has_quoted_HPMultiJetFusion__c.field-meta.xml
<CustomField>
    <fullName>has_quoted_HPMultiJetFusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Quoted: HP Multi Jet Fusion</label>
    <type>Checkbox</type>
</CustomField>