unpackaged/main/default/objects/Contact/fields/Has_Quoted_LSPc__c.field-meta.xml
<CustomField>
    <fullName>Has_Quoted_LSPc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Quoted: LSPc</label>
    <type>Checkbox</type>
</CustomField>