unpackaged/main/default/objects/Contact/fields/Has_Quoted_Other__c.field-meta.xml
<CustomField>
    <fullName>Has_Quoted_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Quoted: Other</label>
    <type>Checkbox</type>
</CustomField>