unpackaged/main/default/objects/Contact/fields/has_quoted_Other_NotIncluded__c.field-meta.xml
<CustomField>
    <fullName>has_quoted_Other_NotIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Quoted: Other (Not Included)</label>
    <type>Checkbox</type>
</CustomField>