unpackaged/main/default/objects/Contact/fields/has_quoted_Sheet_metal__c.field-meta.xml
<CustomField>
    <fullName>has_quoted_Sheet_metal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Quoted: Sheet Metal</label>
    <type>Checkbox</type>
</CustomField>