unpackaged/main/default/objects/Contact/fields/Has_Quoted_Tube_Bending__c.field-meta.xml
<CustomField>
    <fullName>Has_Quoted_Tube_Bending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Quoted: Tube Bending</label>
    <type>Checkbox</type>
</CustomField>