unpackaged/main/default/objects/Contact/fields/has_quoted_Urethane_Casting__c.field-meta.xml
<CustomField>
    <fullName>has_quoted_Urethane_Casting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Quoted: Urethane Casting</label>
    <type>Checkbox</type>
</CustomField>