unpackaged/main/default/objects/Contact/fields/Has_Used_Punchout__c.field-meta.xml
<CustomField>
    <fullName>Has_Used_Punchout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Used Punchout</label>
    <type>Checkbox</type>
</CustomField>