unpackaged/main/default/objects/Contact/fields/High_Potential_2023__c.field-meta.xml
<CustomField>
    <fullName>High_Potential_2023__c</fullName>
    <formula>IF(Account.High_Potential_2023__c = TRUE, TRUE,
 IF(!ISBLANK(Account.ParentId) &amp;&amp; Account.Parent.High_Potential_2023__c = TRUE, TRUE,
  FALSE
 )
)</formula>
    <label>High Potential 2023</label>
    <type>Checkbox</type>
</CustomField>