unpackaged/main/default/objects/Contact/fields/HS_Contact_Link__c.field-meta.xml
<CustomField>
    <fullName>HS_Contact_Link__c</fullName>
    <formula>IF(NOT(ISBLANK(Hubspot_contactid_mvp_load__c)),  HYPERLINK("https://app.hubspot.com/contacts/340051/contact/"+Hubspot_contactid_mvp_load__c,"Go to this Contact in Hubspot","_blank") , "No Hubspot Contact from MVP Load")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS Contact Link</label>
    <type>Text</type>
</CustomField>