unpackaged/main/default/objects/Contact/fields/HS_Design_Guide_Processes__c.field-meta.xml
<CustomField>
    <fullName>HS_Design_Guide_Processes__c</fullName>
    <description>Hubspot Integration Design Guide Download</description>
    <inlineHelpText>This List Comes from Hubspot</inlineHelpText>
    <label>HS Design Guide Processes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HS_Design_Guide_Processes</valueSetName>
    </valueSet>
</CustomField>