unpackaged/main/default/objects/Contact/fields/HS_Manufacturing_Processes_Utilized__c.field-meta.xml
<CustomField>
    <fullName>HS_Manufacturing_Processes_Utilized__c</fullName>
    <description>Captures data from Hubspots' User Profile Form for this field. Not editable in Salesforce. Source of truth is Hubspot.</description>
    <label>HS Manufacturing Processes Utilized</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CNC Machining</fullName>
            </value>
            <value>
                <fullName>Sheet Metal Fabrication</fullName>
            </value>
            <value>
                <fullName>Injection Molding</fullName>
            </value>
            <value>
                <fullName>Urethane Casting</fullName>
            </value>
            <value>
                <fullName>Stereolithography</fullName>
            </value>
            <value>
                <fullName>Selective Laser Sintering</fullName>
            </value>
            <value>
                <fullName>HP Multijet Fusion</fullName>
            </value>
            <value>
                <fullName>Direct Metal Laser Sintering</fullName>
            </value>
            <value>
                <fullName>Binder Jetting</fullName>
            </value>
            <value>
                <fullName>Polyjet 3D</fullName>
            </value>
            <value>
                <fullName>Fused Deposition Modeling</fullName>
            </value>
            <value>
                <fullName>Carbon Digital Light Synthesis</fullName>
            </value>
            <value>
                <fullName>Stamping</fullName>
            </value>
            <value>
                <fullName>Metal Extrusion</fullName>
            </value>
            <value>
                <fullName>Die Casting</fullName>
            </value>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>