unpackaged/main/default/objects/Contact/fields/HS_Original_Owner__c.field-meta.xml
<CustomField>
    <fullName>HS_Original_Owner__c</fullName>
    <label>HS Original Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>161630133</fullName>
                <label>Aaron Howell</label>
            </value>
            <value>
                <fullName>191250324</fullName>
                <label>Aaron Spalding</label>
            </value>
            <value>
                <fullName>38658900</fullName>
                <label>Abbie Bowling</label>
            </value>
            <value>
                <fullName>34045891</fullName>
                <label>Adam Riney</label>
            </value>
            <value>
                <fullName>53031403</fullName>
                <label>Aleigh Zimmerman</label>
            </value>
            <value>
                <fullName>498245678</fullName>
                <label>Alexander Swanson</label>
            </value>
            <value>
                <fullName>36884714</fullName>
                <label>Alex Saunders</label>
            </value>
            <value>
                <fullName>74692262</fullName>
                <label>Amanda Eure</label>
            </value>
            <value>
                <fullName>56578909</fullName>
                <label>Amber Pettus</label>
            </value>
            <value>
                <fullName>153489832</fullName>
                <label>Amir Bahrami</label>
            </value>
            <value>
                <fullName>48031784</fullName>
                <label>Andrew Scott</label>
            </value>
            <value>
                <fullName>224039817</fullName>
                <label>Angela Sandoval</label>
            </value>
            <value>
                <fullName>53034744</fullName>
                <label>Ashlee Laughter</label>
            </value>
            <value>
                <fullName>372504912</fullName>
                <label>Ashley Grassi</label>
            </value>
            <value>
                <fullName>467313009</fullName>
                <label>Ben Walther</label>
            </value>
            <value>
                <fullName>144186137</fullName>
                <label>Beth Tiller</label>
            </value>
            <value>
                <fullName>53035987</fullName>
                <label>Bob Bellingrath</label>
            </value>
            <value>
                <fullName>15310753</fullName>
                <label>Bobby Youssefi</label>
            </value>
            <value>
                <fullName>349526093</fullName>
                <label>Brad Holway</label>
            </value>
            <value>
                <fullName>110709112</fullName>
                <label>Brendan O'Brien</label>
            </value>
            <value>
                <fullName>53035988</fullName>
                <label>Brittany Glassford</label>
            </value>
            <value>
                <fullName>195419725</fullName>
                <label>Cale Lauchner</label>
            </value>
            <value>
                <fullName>203167068</fullName>
                <label>Cameryn Cline</label>
            </value>
            <value>
                <fullName>49186237</fullName>
                <label>Carter Atchison</label>
            </value>
            <value>
                <fullName>49503350</fullName>
                <label>Chance Rogers</label>
            </value>
            <value>
                <fullName>144183846</fullName>
                <label>Charles Meier</label>
            </value>
            <value>
                <fullName>97744266</fullName>
                <label>Chris Bizjack</label>
            </value>
            <value>
                <fullName>181876016</fullName>
                <label>Christopher Lieblang</label>
            </value>
            <value>
                <fullName>211883523</fullName>
                <label>Cindy Larin</label>
            </value>
            <value>
                <fullName>148896053</fullName>
                <label>Clay Williams</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>