unpackaged/main/default/objects/Contact/fields/HS_Original_source_drill_down_1__c.field-meta.xml
<CustomField>
    <fullName>HS_Original_source_drill_down_1__c</fullName>
    <description>Original Source Drill Down from Hubspot</description>
    <label>HS Original source drill-down 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>