unpackaged/main/default/objects/Contact/fields/HS_Preferred_Online_Provider__c.field-meta.xml
<CustomField>
    <fullName>HS_Preferred_Online_Provider__c</fullName>
    <description>Captures data from Hubspots' User Profile Form for Preferred Online Manufacturing Provider. Not editable in Salesforce. Source of truth is Hubspot.</description>
    <label>HS Preferred Online Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>