unpackaged/main/default/objects/Contact/fields/HS_Purchase_Authority__c.field-meta.xml
<CustomField>
    <fullName>HS_Purchase_Authority__c</fullName>
    <description>Captures data from Hubspots' User Profile Form for this field. Not editable in Salesforce. Source of truth is Hubspot.</description>
    <label>HS Purchase Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole Decision Maker</fullName>
            </value>
            <value>
                <fullName>Part of the Decision Making Group</fullName>
            </value>
            <value>
                <fullName>Decision Influencer</fullName>
            </value>
            <value>
                <fullName>No Decision Making Authority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>