unpackaged/main/default/objects/Contact/fields/HS_Spending_Limit__c.field-meta.xml
<CustomField>
    <fullName>HS_Spending_Limit__c</fullName>
    <description>Captures data from Hubspots' User Profile Form for this field. Not editable in Salesforce. Source of truth is Hubspot.</description>
    <label>HS Spending Limit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>