unpackaged/main/default/objects/Contact/fields/Hubspot_contactid_mvp_load__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_contactid_mvp_load__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Hubspot's ID for the Contact. Used during initial data load.</inlineHelpText>
    <label>HS Contact ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>