unpackaged/main/default/objects/Contact/fields/Identified_as_Priority__c.field-meta.xml
<CustomField>
    <fullName>Identified_as_Priority__c</fullName>
    <formula>Account.Identified_as_Priority__c</formula>
    <label>Identified as Priority</label>
    <type>Checkbox</type>
</CustomField>