unpackaged/main/default/objects/Contact/fields/IntercomUserId__c.field-meta.xml
<CustomField>
    <fullName>IntercomUserId__c</fullName>
    <label>IntercomUserId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>