unpackaged/main/default/objects/Contact/fields/Is_Spam_Flag__c.field-meta.xml
<CustomField>
    <fullName>Is_Spam_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Spam Flag</label>
    <type>Checkbox</type>
</CustomField>