unpackaged/main/default/objects/Contact/fields/LADAM_Potentially_Wrong__c.field-meta.xml
<CustomField>
    <fullName>LADAM_Potentially_Wrong__c</fullName>
    <formula>(
 (LastActivityDate &gt; (TODAY() - 175)) &amp;&amp;
 !ISBLANK(LastActivityDate)
)

&amp;&amp;

(
 (ISBLANK(Last_Activity_Date_AM__c)) ||
 ((DATEVALUE(Last_Activity_Date_AM__c)) &lt; (LastActivityDate - 1))
)</formula>
    <label>LADAM Potentially Wrong</label>
    <type>Checkbox</type>
</CustomField>