unpackaged/main/default/objects/Contact/fields/Last30FusionLastMaterial__c.field-meta.xml
<CustomField>
    <fullName>Last30FusionLastMaterial__c</fullName>
    <label>Last 30 Fusion Last Material</label>
    <type>TextArea</type>
</CustomField>