unpackaged/main/default/objects/Contact/fields/Last30FusionNumofEstimates__c.field-meta.xml
<CustomField>
    <fullName>Last30FusionNumofEstimates__c</fullName>
    <label>Last 30 Fusion Num of Estimates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>