unpackaged/main/default/objects/Contact/fields/Last30FusionProcesses__c.field-meta.xml
<CustomField>
    <fullName>Last30FusionProcesses__c</fullName>
    <label>Last 30 Fusion Processes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>