unpackaged/main/default/objects/Contact/fields/Last_Contact_Owner_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Owner_Change_Date__c</fullName>
    <inlineHelpText>Date in which the Contact Owner was changed last.</inlineHelpText>
    <label>Last Contact Owner Change Date</label>
    <type>DateTime</type>
</CustomField>