unpackaged/main/default/objects/Contact/fields/Last_Fusion_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Last_Fusion_Estimate__c</fullName>
    <label>Last Fusion Estimate</label>
    <type>DateTime</type>
</CustomField>