unpackaged/main/default/objects/Contact/fields/Last_IM_Email_Clickthrough_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_IM_Email_Clickthrough_Date__c</fullName>
    <label>Last IM Email Clickthrough Date</label>
    <type>Date</type>
</CustomField>