unpackaged/main/default/objects/Contact/fields/Last_Page_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Page_Visit_Date__c</fullName>
    <description>Last Date that the customer visited the main Xometry Site</description>
    <label>Last Page Visit Date</label>
    <type>Date</type>
</CustomField>