unpackaged/main/default/objects/Contact/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <label>[dnu] Lead Score</label>
    <length>30</length>
    <type>Text</type>
</CustomField>