unpackaged/main/default/objects/Contact/fields/Lifetime_2D_Spend__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_2D_Spend__c</fullName>
    <label>[dnu] Lifetime 2D Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>