unpackaged/main/default/objects/Contact/fields/Lifetime_No_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_No_of_Orders__c</fullName>
    <label>Lifetime No. of Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>