unpackaged/main/default/objects/Contact/fields/LinkedIn_Handle__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Handle__c</fullName>
    <label>LinkedIn Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>