unpackaged/main/default/objects/Contact/fields/LTV_LKP__c.field-meta.xml
<CustomField>
    <fullName>LTV_LKP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A Lookup to the LTV Object</description>
    <label>LTV_LKP</label>
    <referenceTo>LTV__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>