unpackaged/main/default/objects/Contact/fields/Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Approval</label>
    <type>Checkbox</type>
</CustomField>