unpackaged/main/default/objects/Contact/fields/Manually_Pushed_to_Pool__c.field-meta.xml
<CustomField>
    <fullName>Manually_Pushed_to_Pool__c</fullName>
    <formula>Account.Manually_Pushed_to_Pool__c</formula>
    <label>Manually Pushed to Pool</label>
    <type>Checkbox</type>
</CustomField>