unpackaged/main/default/objects/Contact/fields/Manufacturing_Interests__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Interests__c</fullName>
    <label>Manufacturing Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturing_Process</valueSetName>
    </valueSet>
</CustomField>