unpackaged/main/default/objects/Contact/fields/MK_Customer_Fit_Signals__c.field-meta.xml
<CustomField>
    <fullName>MK_Customer_Fit_Signals__c</fullName>
    <description>Madkudu top customer fit signals</description>
    <inlineHelpText>Madkudu top customer fit signals</inlineHelpText>
    <label>MK Customer Fit Signals</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>