unpackaged/main/default/objects/Contact/fields/MK_Lead_Grade__c.field-meta.xml
<CustomField>
    <fullName>MK_Lead_Grade__c</fullName>
    <description>Madkudu Lead Grade emoji</description>
    <formula>CASE(MK_Lead_Grade_Segment__c, 
'A', IMAGE("https://cdn.madkudu.com/images/lead_grades/grade_a_s.png", "A", 20, 20), 
'B', IMAGE("https://cdn.madkudu.com/images/lead_grades/grade_b_s.png", "B", 20, 20), 
'C', IMAGE("https://cdn.madkudu.com/images/lead_grades/grade_c_s.png", "C", 20, 20), 
'D', IMAGE("https://cdn.madkudu.com/images/lead_grades/grade_d_s.png", "D", 20, 20), 
IMAGE("https://cdn.madkudu.com/images/lead_grades/grade_e_s.png", "E", 20, 20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Madkudu Lead Grade emoji</inlineHelpText>
    <label>MK Lead Grade</label>
    <type>Text</type>
</CustomField>