unpackaged/main/default/objects/Contact/fields/MK_Lead_Grade_Score__c.field-meta.xml
<CustomField>
    <fullName>MK_Lead_Grade_Score__c</fullName>
    <description>Madkudu Lead Grade score (between 0 and 100)</description>
    <inlineHelpText>Madkudu Lead Grade score (between 0 and 100)</inlineHelpText>
    <label>MK Lead Grade Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>