unpackaged/main/default/objects/Contact/fields/MK_Likelihood_to_Buy__c.field-meta.xml
<CustomField>
    <fullName>MK_Likelihood_to_Buy__c</fullName>
    <description>Madkudu likelihood to buy emoji</description>
    <formula>CASE(MK_Likelihood_to_Buy_Segment__c ,
'very high', IMAGE("https://cdn.madkudu.com/images/fire.png", "Fire", 20, 20) + IMAGE("https://cdn.madkudu.com/images/fire.png", "Fire", 20, 20) + IMAGE("https://cdn.madkudu.com/images/fire.png", "Fire", 20, 20),
'high', IMAGE("https://cdn.madkudu.com/images/fire.png", "Fire", 20, 20) + IMAGE("https://cdn.madkudu.com/images/fire.png", "Fire", 20, 20),
'medium', IMAGE("https://cdn.madkudu.com/images/fire.png", "Fire", 20, 20),
IMAGE("https://cdn.madkudu.com/images/snowflake.png", "Snowflake", 20, 20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Madkudu likelihood to buy emoji</inlineHelpText>
    <label>MK Likelihood to Buy</label>
    <type>Text</type>
</CustomField>