unpackaged/main/default/objects/Contact/fields/MK_SMB_Customer_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>MK_SMB_Customer_Fit_Score__c</fullName>
    <label>MK SMB Customer Fit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>