unpackaged/main/default/objects/Contact/fields/MK_SMB_Customer_Fit_Segment__c.field-meta.xml
<CustomField>
    <fullName>MK_SMB_Customer_Fit_Segment__c</fullName>
    <label>MK SMB Customer Fit Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>