unpackaged/main/default/objects/Contact/fields/MK_SMB_Customer_Fit_Signals__c.field-meta.xml
<CustomField>
    <fullName>MK_SMB_Customer_Fit_Signals__c</fullName>
    <label>MK SMB Customer Fit Signals</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>