unpackaged/main/default/objects/Contact/fields/MK_Ultimate_Customer_Fit__c.field-meta.xml
<CustomField>
    <fullName>MK_Ultimate_Customer_Fit__c</fullName>
    <formula>IF(Account.Company_Category_Corp_Level__c = "Small Business",
 MK_SMB_Customer_Fit__c,
 MK_Customer_Fit__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MK Ultimate Customer Fit</label>
    <type>Text</type>
</CustomField>