unpackaged/main/default/objects/Contact/fields/MK_Ultimate_Customer_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>MK_Ultimate_Customer_Fit_Score__c</fullName>
    <formula>IF(Account.Company_Category_Corp_Level__c = "Small Business",
 MK_SMB_Customer_Fit_Score__c,
 MK_Customer_Fit_Score__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MK Ultimate Customer Fit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>