unpackaged/main/default/objects/Contact/fields/MKTG_Report_Tracking__c.field-meta.xml
<CustomField>
    <fullName>MKTG_Report_Tracking__c</fullName>
    <description>This field is available for the Marketing team to make changes on records in HS that can be filtered on in Salesforce.</description>
    <label>MKTG_Report_Tracking</label>
    <length>100</length>
    <type>Text</type>
</CustomField>