unpackaged/main/default/objects/Contact/fields/New_RFQ__c.field-meta.xml
<CustomField>
    <fullName>New_RFQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by Traction Case flow when a new RFQ case has been created only for "House" owned Contacts. 
BDR Pool, CPC House Owned Contacts Only!</description>
    <label>New RFQ</label>
    <type>Checkbox</type>
</CustomField>