unpackaged/main/default/objects/Contact/fields/Not_Relevant_to_Sales__c.field-meta.xml
<CustomField>
    <fullName>Not_Relevant_to_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To hide contacts from reports</description>
    <inlineHelpText>Mark if contact is not a "sales" contact (I.E. Customer Service Rep, VP of Finance, etc.)</inlineHelpText>
    <label>Not Relevant to Sales</label>
    <type>Checkbox</type>
</CustomField>