unpackaged/main/default/objects/Contact/fields/Number_2D_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_2D_Orders__c</fullName>
    <label>[dnu] # of 2D Orders</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>