unpackaged/main/default/objects/Contact/fields/Number_of_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Opportunities__c</fullName>
    <label># of Open Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>