unpackaged/main/default/objects/Contact/fields/NumberofFusionEstimates__c.field-meta.xml
<CustomField>
    <fullName>NumberofFusionEstimates__c</fullName>
    <label>Number of Fusion Estimates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>