unpackaged/main/default/objects/Contact/fields/OR_Tag__c.field-meta.xml
<CustomField>
    <fullName>OR_Tag__c</fullName>
    <description>Facilitates Sequence Automation</description>
    <label>OR Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>