unpackaged/main/default/objects/Contact/fields/Ordered_2D_Processes__c.field-meta.xml
<CustomField>
    <fullName>Ordered_2D_Processes__c</fullName>
    <label>[dnu] Ordered 2D Processes</label>
    <type>Date</type>
</CustomField>